# RGGPU

./: CMakeLists.txt  README.md
04_deffered/: main.cpp  renderer.hpp
04_deffered/shaders/: compositing.fragment.glsl  passthrough.vertex.glsl
04_dof/: CMakeLists.txt
04_dof/shaders/: deferred_lighting.fragment.glsl  deferred_lighting.program  dof.fragment.glsl
utils/: framebuffer.hpp
